Integrating shared assets - WIP

--- a/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
+++ b/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
@@ -1,2 +1,7 @@
 <p>Feature Home works!</p>
+<img src='assets/images/avatar2.png' alt="profile_img" />
+
+<br>
+<br>
+<br>
 <button nz-button nzType="primary">Primary</button>
