--- a/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
+++ b/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
@@ -1,5 +1,5 @@
 <p>Feature Home works!</p>
-<img src='assets/images/avatar2.png' alt="profile_img" />
+<img src='assets/shared/images/avatar2.png' alt="profile_img" />
 
 <br>
 <br>
