En and Ar lang integration based on library

--- a/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
+++ b/src/libs/features/feature-home/src/lib/feature-home/feature-home.html
@@ -4,4 +4,10 @@
 <br>
 <br>
 <br>
+<label for="isRtl">is RTL</label>
+<br>
+<nz-switch [(ngModel)]="isRtl"></nz-switch>
+<br>
+<br>
+<br>
 <button nz-button nzType="primary">Primary</button>
